--- a/index.html
+++ b/index.html
@@ -3,11 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Git Demo</title>
+    <title>Document</title>
 </head>
 <body>
-    <h1>Git Demo</h1>
-    <h2>updated index.html</h2>
+    <form action="">
+    <h1>
+        login
+    </h1>
+    <label for="name">Name</label><br>
+    <input type="text"name="name"id="name"><br>
+    <label for="email">Email</label><br>
+    <input type="text"name="email"id ="email"><br>
+    <label for="date">date-of-birth</label><br>
+    <input type="date"name="date"id ="mobile"><br>
+    <label for="password">password</label><br>
+    <input type="password"name="password"id ="password"><br>
+    <button type="button"> submit</button>
+</form>
 
 </body>
 </html>
